exports[`use various parts of svg-edit > check tool_source #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="24"
        id="svg_1"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_clone #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="24"
        id="svg_1"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="24"
        id="svg_2"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        x="80"
        xml:space="preserve"
        y="80.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_italic #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="24"
        id="svg_1"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="24"
        font-style="italic"
        id="svg_2"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        x="80"
        xml:space="preserve"
        y="80.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_bold #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="24"
        font-weight="bold"
        id="svg_1"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="24"
        font-style="italic"
        id="svg_2"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        x="80"
        xml:space="preserve"
        y="80.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_change_x_y_coordinate #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="24"
        font-weight="bold"
        id="svg_1"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        transform="matrix(1 0 0 1 0 0)"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="24"
        font-style="italic"
        id="svg_2"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        x="105"
        xml:space="preserve"
        y="105"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_change_font_size #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="24"
        font-style="italic"
        id="svg_2"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        transform="matrix(1 0 0 1 0 0)"
        x="105"
        xml:space="preserve"
        y="105"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_change_stroke_width #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        stroke="#000000"
        text-anchor="middle"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="24"
        font-style="italic"
        id="svg_2"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        transform="matrix(1 0 0 1 0 0)"
        x="105"
        xml:space="preserve"
        y="105"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_change_stoke_fill_color #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        stroke="#0000bf"
        text-anchor="middle"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
      <text
        fill="#000000"
        font-family="Serif"
        font-size="24"
        font-style="italic"
        id="svg_2"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        transform="matrix(1 0 0 1 0 0)"
        x="105"
        xml:space="preserve"
        y="105"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_change_blur #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        stroke="#0000bf"
        text-anchor="middle"
        transform="matrix(1 0 0 1 0 0)"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
      <text
        fill="#000000"
        filter="url(#svg_2_blur)"
        font-family="Serif"
        font-size="24"
        font-style="italic"
        id="svg_2"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        x="105"
        xml:space="preserve"
        y="105"
      >
        AB
      </text>
    </g>
    <defs>
      <filter height="200%" id="svg_2_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_change_opacity #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        stroke="#0000bf"
        text-anchor="middle"
        transform="matrix(1 0 0 1 0 0)"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
      <text
        fill="#000000"
        filter="url(#svg_2_blur)"
        font-family="Serif"
        font-size="24"
        font-style="italic"
        id="svg_2"
        opacity="0.5"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        x="105"
        xml:space="preserve"
        y="105"
      >
        AB
      </text>
    </g>
    <defs>
      <filter height="200%" id="svg_2_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_align_to_page #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        stroke="#0000bf"
        text-anchor="middle"
        transform="matrix(1 0 0 1 0 0)"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
      <text
        fill="#000000"
        filter="url(#svg_2_blur)"
        font-family="Serif"
        font-size="24"
        font-style="italic"
        id="svg_2"
        opacity="0.5"
        stroke="#000000"
        stroke-width="0"
        text-anchor="middle"
        x="105"
        xml:space="preserve"
        y="105"
      >
        AB
      </text>
    </g>
    <defs>
      <filter height="200%" id="svg_2_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_delete #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        stroke="#0000bf"
        text-anchor="middle"
        transform="matrix(1 0 0 1 0 0)"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_change_font_family #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        stroke="#0000bf"
        text-anchor="middle"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_decoration_underline #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        stroke="#0000bf"
        text-anchor="middle"
        text-decoration="underline"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_decoration_linethrough #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        stroke="#0000bf"
        text-anchor="middle"
        text-decoration="underline line-through"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_decoration_overline #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        stroke="#0000bf"
        text-anchor="middle"
        text-decoration="underline line-through overline"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_letter_spacing #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        letter-spacing="10"
        stroke="#0000bf"
        text-anchor="middle"
        text-decoration="underline line-through overline"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_word_spacing #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        letter-spacing="10"
        stroke="#0000bf"
        text-anchor="middle"
        text-decoration="underline line-through overline"
        word-spacing="15"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_length #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        letter-spacing="10"
        stroke="#0000bf"
        text-anchor="middle"
        text-decoration="underline line-through overline"
        textLength="20"
        word-spacing="15"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_length_adjust #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        lengthAdjust="spacingAndGlyphs"
        letter-spacing="10"
        stroke="#0000bf"
        text-anchor="middle"
        text-decoration="underline line-through overline"
        textLength="20"
        word-spacing="15"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;

exports[`use various parts of svg-edit > check tool_text_change_rotation #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <text
        fill="#bf0000"
        font-family="Serif"
        font-size="34"
        font-weight="bold"
        id="svg_1"
        lengthAdjust="spacingAndGlyphs"
        letter-spacing="10"
        stroke="#0000bf"
        text-anchor="middle"
        text-decoration="underline line-through overline"
        textLength="20"
        transform="rotate(25 60 49.5)"
        word-spacing="15"
        x="60"
        xml:space="preserve"
        y="60.5"
      >
        AB
      </text>
    </g>
  </svg>
</body>
`;
